# o2switch-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  VERSIONING.md  install.sh  pyproject.toml  uninstall.sh
docs/specs/: README.md
docs/specs/00-overview/: intake-et-perimetre.md
docs/specs/01-product/: spec-produit.md
docs/specs/02-architecture/: architecture-technique.md
docs/specs/03-cli/: spec-cli-et-ux.md
docs/specs/04-api/: integration-cpanel-o2switch.md  references.md
docs/specs/05-data/: modeles-et-contrats.md
docs/specs/06-operations/: securite-audit-erreurs.md
docs/specs/07-delivery/: decision-log.md  tests-milestones-et-backlog.md
o2switch_cli/: __main__.py  install_support.py
o2switch_cli/cli/: __init__.py  autocomplete.py  completion_cmd.py  completion_support.py  config_cmd.py  context.py  dns.py  domains.py  helpers.py  interactive.py  interactive_support.py  main.py  subdomains.py  ui.py
o2switch_cli/config/: __init__.py  settings.py
o2switch_cli/core/: __init__.py  audit.py  auth.py  cpanel_client.py  dns_service.py  domain_service.py  errors.py  models.py  subdomain_service.py  validators.py
o2switch_cli/infra/: __init__.py  resolver.py
tests/: test_autocomplete.py  test_cli.py  test_completion_cmd.py  test_completion_support.py  test_config_cmd.py  test_cpanel_client.py  test_dns_service.py  test_install_support.py  test_interactive.py  test_interactive_support.py  test_settings.py  test_subdomain_service.py  test_validators.py
