[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "o2switch-cli"
dynamic = ["version"]
description = "Interactive CLI for managing o2switch/cPanel domains, subdomains, and DNS records."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dnspython>=2.6,<3.0",
  "httpx>=0.27,<1.0",
  "platformdirs>=4.3,<5.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "prompt_toolkit>=3.0,<4.0",
  "questionary>=2.0,<3.0",
  "rich>=13.7,<15.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
o2switch-cli = "o2switch_cli.cli.main:run"
o2switch_cli = "o2switch_cli.cli.main:run"

[tool.setuptools.packages.find]
include = ["o2switch_cli*"]

[tool.setuptools.dynamic]
version = {attr = "o2switch_cli.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["B008"]
